modified layout and styles

--- a/wwwroot/home.html
+++ b/wwwroot/home.html
@@ -7,13 +7,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
     <link rel="stylesheet/less" type="text/css" href="styles/_layout.less" />
-    <script src="scripts/less.js" type="text/javascript"></script>
+    <script src="scripts/_less.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="hero-image__container">
         <div class="hero-image__info">
+            <a href="mailto:robyn.stanco@gmail.com">
+                <img src="images/emailIcon.png" class="email-me" />
+            </a>
             <h1>Robyn Stanco's Portfolio</h1>
             <p>Hardworking & inquisitive Software Engineer II with experience in a variety of technologies.</p>
+
         </div>
         <div class="hero-image__navigation-container">
             <div class="hero-image__navigation-list">
