--- a/wwwroot/home.html
+++ b/wwwroot/home.html
@@ -61,22 +61,13 @@
                     An ASP.NET Core MVC Web Application that utilizes EntityFrameworkCore. Search Pokémon based on a variety of criterion. Create, modify, and view a personal Pokédex.
                 </div>
             </a>
-            <a class="github-item" href="https://github.com/robynstanco/Selenium-For-Salesforce" target="_blank">
-                <h2 class="github-item__title">Selenium for SalesForce (Coming Soon)</h2>
+            <a class="github-item" href="https://github.com/robynstanco/Selenium-Framework" target="_blank">
+                <h2 class="github-item__title">Selenium Framework (Coming Soon)</h2>
                 <div class="github-item__img">
                     <img src="https://via.placeholder.com/333x187" />
                 </div>
                 <div class="github-item__desc">
-                    An Automated Testing Framework that utilizes Selenium WebDriver (ChromeDriver). Test OOtB Salesforce features.
-                </div>
-            </a>
-            <a class="github-item" href="https://github.com/robynstanco/Salesforce-For-Neopets" target="_blank">
-                <h2 class="github-item__title">Selenium for Neopets (Coming Soon)</h2>
-                <div class="github-item__img">
-                    <img src="https://via.placeholder.com/333x187" />
-                </div>
-                <div class="github-item__desc">
-                    An Automated Testing/Botting Framework that utilizes Selenium WebDriver (ChromeDriver). Complete various daily tasks in order to gain points/items in the game.
+                    An Automated Testing Framework that utilizes Selenium WebDriver (ChromeDriver). 
                 </div>
             </a>
         </div>
