--- a/wwwroot/home.html
+++ b/wwwroot/home.html
@@ -43,42 +43,39 @@
     <div class="main-content__github" id="github">
         <h1>GitHub</h1>
         <div class="github-list">
-            <a class="github-item" href="https://github.com/robynstanco/MaryJane" target="_blank">
-                <h2 class="github-item__title">MaryJane</h2>
-                <div class="github-item__img">
-                    <img src="images/maryJane.png" />
-                </div>
-                <div class="github-item__desc">
-                    An ASP.NET Core MVC Web Application that utilizes EntityFrameworkCore. Create and search your own personal Medicine Cabinet.
-                </div>
-            </a>
             <a class="github-item" href="https://github.com/robynstanco/Pokedex" target="_blank">
                 <h2 class="github-item__title">Pokédex (Coming Soon)</h2>
                 <div class="github-item__img">
                     <img src="https://via.placeholder.com/333x187" />
                 </div>
                 <div class="github-item__desc">
-                    An ASP.NET Core MVC Web Application that utilizes EntityFrameworkCore. Search Pokémon based on a variety of criterion. Create, modify, and view a personal Pokédex.
+                    An ASP.NET Core MVC Web Application &amp; Web API. Search National Dex Pokémon based on a variety of criterion. Create, modify, and view a personal Pokédex.
                 </div>
             </a>
-            <a class="github-item" href="https://github.com/robynstanco/Selenium-For-Salesforce" target="_blank">
-                <h2 class="github-item__title">Selenium for SalesForce (Coming Soon)</h2>
+            <a class="github-item" href="https://github.com/robynstanco/ESPNFeed" target="_blank">
+                <h2 class="github-item__title">ESPN Feed (Coming Soon)</h2>
                 <div class="github-item__img">
                     <img src="https://via.placeholder.com/333x187" />
                 </div>
                 <div class="github-item__desc">
-                    An Automated Testing Framework that utilizes Selenium WebDriver (ChromeDriver). Test OOtB Salesforce features.
+                    An ASP.NET Core MVC Web Application. Read ESPN RSS feeds for your favorite sports.
                 </div>
             </a>
-            <a class="github-item" href="https://github.com/robynstanco/Salesforce-For-Neopets" target="_blank">
-                <h2 class="github-item__title">Selenium for Neopets (Coming Soon)</h2>
+            <a class="github-item" href="https://github.com/robynstanco/ESPNFeedFunctions" target="_blank">
+                <h2 class="github-item__title">ESPN Feed Functions (Coming Soon)</h2>
                 <div class="github-item__img">
                     <img src="https://via.placeholder.com/333x187" />
                 </div>
                 <div class="github-item__desc">
-                    An Automated Testing/Botting Framework that utilizes Selenium WebDriver (ChromeDriver). Complete various daily tasks in order to gain points/items in the game.
+                    A .NET CORE Azure Function Application. Read ESPN RSS feeds for your favorite sports.
                 </div>
             </a>
+            <!--<a class="github-item" href="https://github.com/robynstanco/SeleniumAutomationTestingSuite" target="_blank">
+                <h2 class="github-item__title">Selenium Automation Testing Suite </h2>
+                <div class="github-item__desc">
+                    A Selenium WebDriver/ChromeDriver Automation Testing Suite. Automation test various games, platforms, and applications.
+                </div>
+            </a>-->
         </div>
     </div>
     <footer>
