--- a/wwwroot/home.html
+++ b/wwwroot/home.html
@@ -13,21 +13,20 @@
     <div class="hero-image__container">
         <div class="hero-image__info">
             <a href="mailto:robyn.stanco@gmail.com">
-                <img src="images/emailIcon.png" class="email-me" />
+                <img src="images/emailIcon.png" class="email-me__img" />
             </a>
-            <h1>Robyn Stanco's Portfolio</h1>
+            <h1 class="hero-image__info-title">Robyn Stanco's Portfolio</h1>
             <p>Hardworking & inquisitive Software Engineer II with experience in a variety of technologies.</p>
-
         </div>
-        <div class="hero-image__navigation-container">
-            <div class="hero-image__navigation-list">
-                <a href="#about">About Me</a>
-                <a href="#github">GitHub</a>
-                <a href="https://www.linkedin.com/in/robyn-stanco/" target="_blank">LinkedIn</a>
+        <div class="navigation__container">
+            <div class="navigation__list">
+                <a class="navigation__list-item" href="#about">About Me</a>
+                <a class="navigation__list-item" href="#github">GitHub</a>
+                <a class="navigation__list-item" href="https://www.linkedin.com/in/robyn-stanco/" target="_blank">LinkedIn</a>
             </div>
         </div>
     </div>
-    <div class="main-content__about" id="about">
+    <div class="about-content__container" id="about">
         <h1>About Me</h1>
         <p>
             Hi! My name is Robyn Stanco and I am a professional Software Engineer II. My programming interests are centered around Web Development.
@@ -40,46 +39,49 @@
             <strong>Other Interests:</strong> Playing Guitar, Music, Video Games, TV, Movies, Standup Comedy, Improvisational Comedy, and Acting.
         </p>
     </div>
-    <div class="main-content__github" id="github">
+    <div class="github-content__container" id="github">
         <h1>GitHub</h1>
-        <div class="github-list">
-            <a class="github-item" href="https://github.com/robynstanco/Pokedex" target="_blank">
-                <h2 class="github-item__title">Pokédex (Coming Soon)</h2>
-                <div class="github-item__img">
+        <div class="github-repo__container">
+            <a class="github-repo__item" href="https://github.com/robynstanco/Pokedex" target="_blank">
+                <h2 class="github-repo__item-title">Pokédex (Coming Soon)</h2>
+                <div class="github-repo__item-img">
                     <img src="https://via.placeholder.com/333x187" />
                 </div>
-                <div class="github-item__desc">
+                <div class="github-repo__item-desc">
                     An ASP.NET Core MVC Web Application &amp; Web API. Search National Dex Pokémon based on a variety of criterion. Create, modify, and view a personal Pokédex.
                 </div>
             </a>
-            <a class="github-item" href="https://github.com/robynstanco/ESPNFeed" target="_blank">
-                <h2 class="github-item__title">ESPN Feed (Coming Soon)</h2>
-                <div class="github-item__img">
+            <a class="github-repo__item" href="https://github.com/robynstanco/ESPNFeed" target="_blank">
+                <h2 class="github-repo__item-title">ESPN Feed (Coming Soon)</h2>
+                <div class="github-repo__item-img">
                     <img src="https://via.placeholder.com/333x187" />
                 </div>
-                <div class="github-item__desc">
+                <div class="github-repo__item-desc">
                     An ASP.NET Core MVC Web Application. Read ESPN RSS feeds for your favorite sports.
                 </div>
             </a>
-            <a class="github-item" href="https://github.com/robynstanco/ESPNFeedFunctions" target="_blank">
-                <h2 class="github-item__title">ESPN Feed Functions (Coming Soon)</h2>
-                <div class="github-item__img">
+            <a class="github-repo__item" href="https://github.com/robynstanco/ESPNFeedFunctions" target="_blank">
+                <h2 class="github-repo__item-title">ESPN Feed Functions (Coming Soon)</h2>
+                <div class="github-repo__item-img">
                     <img src="https://via.placeholder.com/333x187" />
                 </div>
-                <div class="github-item__desc">
+                <div class="github-repo__item-desc">
                     A .NET CORE Azure Function Application. Read ESPN RSS feeds for your favorite sports.
                 </div>
             </a>
-            <!--<a class="github-item" href="https://github.com/robynstanco/SeleniumAutomationTestingSuite" target="_blank">
-                <h2 class="github-item__title">Selenium Automation Testing Suite </h2>
-                <div class="github-item__desc">
-                    A Selenium WebDriver/ChromeDriver Automation Testing Suite. Automation test various games, platforms, and applications.
+            <a class="github-repo__item" href="https://github.com/robynstanco/PokeForce" target="_blank">
+                <h2 class="github-repo__item-title">Poké<i>f</i>orce (Coming Soon)</h2>
+                <div class="github-repo__item-img">
+                    <img src="https://via.placeholder.com/333x187" />
                 </div>
-            </a>-->
+                <div class="github-repo__item-desc">
+                    A Sales<i>f</i>orce Lightning Application to create, modify, and view a personal Pokédex.
+                </div>
+            </a>
         </div>
     </div>
     <footer>
-        <span class="footer__info-copyright">&copy; Robyn Stanco</span>
+        <span>&copy; Robyn Stanco</span>
     </footer>
 </body>
 </html>
