--- a/wwwroot/home.html
+++ b/wwwroot/home.html
@@ -45,19 +45,10 @@
             <a class="github-repo__item" href="https://github.com/robynstanco/Pokedex" target="_blank">
                 <h2 class="github-repo__item-title">Pokédex (Coming Soon)</h2>
                 <div class="github-repo__item-img">
-                    <img src="https://via.placeholder.com/333x187" />
+                    <img src="images/pokedexGalleryPhoto.PNG" />
                 </div>
                 <div class="github-repo__item-desc">
-                    An ASP.NET Core MVC Web Application &amp; Web API. Search National Dex Pokémon based on a variety of criterion. Create, modify, and view a personal Pokédex.
-                </div>
-            </a>
-            <a class="github-repo__item" href="https://github.com/robynstanco/ESPNFeed" target="_blank">
-                <h2 class="github-repo__item-title">ESPN Feed (Coming Soon)</h2>
-                <div class="github-repo__item-img">
-                    <img src="https://via.placeholder.com/333x187" />
-                </div>
-                <div class="github-repo__item-desc">
-                    An ASP.NET Core MVC Web Application. Read ESPN RSS feeds for your favorite sports.
+                    An ASP.NET Core MVC Web Application. Search National Dex Pokémon based on a variety of criterion. Create, modify, and view a personal Pokédex.
                 </div>
             </a>
             <a class="github-repo__item" href="https://github.com/robynstanco/ESPNFeedFunctions" target="_blank">
