--- a/wwwroot/home.html
+++ b/wwwroot/home.html
@@ -43,7 +43,7 @@
         <h1>GitHub</h1>
         <div class="github-repo__container">
             <a class="github-repo__item" href="https://github.com/robynstanco/Pokedex" target="_blank">
-                <h2 class="github-repo__item-title">Pokédex (Coming Soon)</h2>
+                <h2 class="github-repo__item-title">Pokédex</h2>
                 <div class="github-repo__item-img">
                     <img src="images/pokedexGalleryPhoto.PNG" />
                 </div>
