--- a/wwwroot/home.html
+++ b/wwwroot/home.html
@@ -16,7 +16,7 @@
                 <img src="images/emailIcon.png" class="email-me__img" />
             </a>
             <h1 class="hero-image__info-title">Robyn Stanco's Portfolio</h1>
-            <p>Hardworking & inquisitive Software Engineer II with experience in a variety of technologies.</p>
+            <p>Hardworking & inquisitive Full Stack Developer with experience in a variety of technologies.</p>
         </div>
         <div class="navigation__container">
             <div class="navigation__list">
@@ -29,7 +29,7 @@
     <div class="about-content__container" id="about">
         <h1>About Me</h1>
         <p>
-            Hi! My name is Robyn Stanco and I am a professional Software Engineer II. My programming interests are centered around Web Development.
+            Hi! My name is Robyn Stanco and I am a professional Full Stack Developer. My programming interests are centered around Web Development.
             I enjoy creating 'widgets' from the ground up on the Web Application or Site I have been tasked with developing. In addition, I love creating responsive, simple, and clean Sites.
         </p>
         <p>
@@ -48,25 +48,16 @@
                     <img src="images/pokedexGalleryPhoto.PNG" />
                 </div>
                 <div class="github-repo__item-desc">
-                    An ASP.NET Core MVC Web Application. Search National Dex Pokémon based on a variety of criterion. Create, modify, and view a personal Pokédex.
+                    An ASP.NET Core MVC/API Web Application. Search National Dex Pokémon based on a variety of criterion. Create, modify, and view a personal Pokédex.
                 </div>
             </a>
-            <a class="github-repo__item" href="https://github.com/robynstanco/ESPNFeedFunctions" target="_blank">
-                <h2 class="github-repo__item-title">ESPN Feed Functions (Coming Soon)</h2>
+            <a class="github-repo__item" href="https://github.com/robynstanco/ESPNFeedFunction" target="_blank">
+                <h2 class="github-repo__item-title">ESPN Feed Function</h2>
                 <div class="github-repo__item-img">
-                    <img src="https://via.placeholder.com/333x187" />
+                    <img src="images/espnfeedGallery.PNG" />
                 </div>
                 <div class="github-repo__item-desc">
                     A .NET CORE Azure Function Application. Read ESPN RSS feeds for your favorite sports.
-                </div>
-            </a>
-            <a class="github-repo__item" href="https://github.com/robynstanco/PokeForce" target="_blank">
-                <h2 class="github-repo__item-title">Poké<i>f</i>orce (Coming Soon)</h2>
-                <div class="github-repo__item-img">
-                    <img src="https://via.placeholder.com/333x187" />
-                </div>
-                <div class="github-repo__item-desc">
-                    A Sales<i>f</i>orce Lightning Application to create, modify, and view a personal Pokédex.
                 </div>
             </a>
         </div>
