--- a/wwwroot/home.html
+++ b/wwwroot/home.html
@@ -60,10 +60,28 @@
                     A .NET CORE Azure Function Application. Read ESPN RSS feeds for your favorite sports.
                 </div>
             </a>
+            <a class="github-repo__item" href="https://github.com/robynstanco/SeleniumAutomationSuite" target="_blank">
+                <h2 class="github-repo__item-title">Selenium Automation Suite</h2>
+                <div class="github-repo__item-img">
+                    <img src="images/selenium.png" />
+                </div>
+                <div class="github-repo__item-desc">
+                    A .NET Core 3.1 Selenium Framework, utlizing chromedriver, for various platforms and games
+                </div>
+            </a>
+            <a class="github-repo__item" href="https://github.com/robynstanco" target="_blank">
+                <h2 class="github-repo__item-title">(Coming Soon) æther</h2>
+                <div class="github-repo__item-img">
+                     <img src="https://ethereum.org/static/c3bcc8c47890ffd2a2c329972c73d0fd/31987/ethereum-logo-portrait-black-gray.png"/>
+                </div>
+                <div class="github-repo__item-desc">
+                    A Decentralized Finance Application (dApp) running on Solidity & Vue.js. Swap ETH (Ether) from public wallets utilizing Ethereum Blockchain.
+                </div>
+            </a>
         </div>
     </div>
     <footer>
-        <span>&copy; Robyn Stanco</span>
+        <span>&copy; Robyn Stanco 2021</span>
     </footer>
 </body>
 </html>
