--- a/wwwroot/home.html
+++ b/wwwroot/home.html
@@ -66,7 +66,7 @@
                     <img src="images/selenium.png" />
                 </div>
                 <div class="github-repo__item-desc">
-                    A .NET Core 3.1 Selenium Framework, utlizing chromedriver, for various platforms and games
+                    A .NET Core 3.1 Selenium Framework, utlizing chromedriver, for various platforms and games.
                 </div>
             </a>
             <a class="github-repo__item" href="https://github.com/robynstanco" target="_blank">
