--- a/wwwroot/home.html
+++ b/wwwroot/home.html
@@ -72,7 +72,7 @@
             <a class="github-repo__item" href="https://github.com/robynstanco" target="_blank">
                 <h2 class="github-repo__item-title">(Coming Soon) æther</h2>
                 <div class="github-repo__item-img">
-                     <img src="https://ethereum.org/static/c3bcc8c47890ffd2a2c329972c73d0fd/31987/ethereum-logo-portrait-black-gray.png"/>
+                     <img src="https://images.unsplash.com/photo-1620321023374-d1a68fbc720d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1797&q=80"/>
                 </div>
                 <div class="github-repo__item-desc">
                     A Decentralized Finance Application (dApp) running on Solidity & Vue.js. Swap ETH (Ether) from public wallets utilizing Ethereum Blockchain.
