--- a/wwwroot/home.html
+++ b/wwwroot/home.html
@@ -48,7 +48,7 @@
                     <img src="images/pokedexGalleryPhoto.PNG" />
                 </div>
                 <div class="github-repo__item-desc">
-                    An ASP.NET Core MVC/API Web Application. Search National Dex Pokémon based on a variety of criterion. Create, modify, and view a personal Pokédex.
+                    An ASP.NET Core 3.1 MVC/API Web Application. Search National Dex Pokémon based on a variety of criterion. Create, modify, and view a personal Pokédex.
                 </div>
             </a>
             <a class="github-repo__item" href="https://github.com/robynstanco/ESPNFeedFunction" target="_blank">
@@ -57,7 +57,7 @@
                     <img src="images/espnfeedGallery.PNG" />
                 </div>
                 <div class="github-repo__item-desc">
-                    A .NET CORE Azure Function Application. Read ESPN RSS feeds for your favorite sports.
+                    A .NET Core 3.1 Azure Function Application. Read ESPN RSS feeds for your favorite sports.
                 </div>
             </a>
             <a class="github-repo__item" href="https://github.com/robynstanco/SeleniumAutomationSuite" target="_blank">
@@ -75,7 +75,7 @@
                      <img src="https://images.unsplash.com/photo-1620321023374-d1a68fbc720d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1797&q=80"/>
                 </div>
                 <div class="github-repo__item-desc">
-                    A Decentralized Finance Application (dApp) running on Solidity & Vue.js. Swap ETH (Ether) from public wallets utilizing Ethereum Blockchain.
+                    A Decentralized Finance Application (dApp) utilizing Solidity, React.js, Redux/Redux-Saga, Ether.js, HardHat, & GraphQL. Swap ETH (Ether) from public wallets running on the Ethereum Blockchain.
                 </div>
             </a>
         </div>
